--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+0.003   2015-12-17
+        * Clarify overloading approach. Sorry, everyone!
+        * Document :all option.
+
 0.002   2015-12-05
         * Ugh PAUSE. Thanks, Graham Barr.
 
