--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.004
+        * Mention and compare to Scalar::Util::reftype.
+        * Add benchmark results, including against reftype.
+        * Add a note about the nature of playing with op trees, sort of.
+
 0.003   2015-12-17
         * Clarify overloading approach. Sorry, everyone!
         * Document :all option.
