--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+0.005
+        * Provide metadata to direct people to Github instead of RT.
+          (Thanks, Graham Ollis!)
+
 0.004   2015-12-18
         * Add is_refref() function!
         * Mention and compare to Scalar::Util::reftype.
