--- a/Changes
+++ b/Changes
@@ -1,6 +1,11 @@
-0.005
+0.005   2015-12-28
+        * Support for 5.8. (Tested on 5.8.9)
+        * Support for 5.6, except for is_formatref. (Tested on 5.6.2)
+        * Support older Test::More versions.
         * Provide metadata to direct people to Github instead of RT.
           (Thanks, Graham Ollis!)
+        * Clarify Readonly, tied variables, and magic.
+        * Cleaned up docs a bit.
 
 0.004   2015-12-18
         * Add is_refref() function!
