--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 0.005   2015-12-28
+        * Support for 5.10. (Tested on 5.10.1)
         * Support for 5.8. (Tested on 5.8.9)
         * Support for 5.6, except for is_formatref. (Tested on 5.6.2)
         * Support older Test::More versions.
