--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     Ref::Util - Utility functions for checking references
 
 VERSION
-    0.004
+    0.006
 
 DESCRIPTION
     Ref::Util introduces several functions to help identify references in a
@@ -102,14 +102,29 @@ DESCRIPTION
         duck-typing you can introspect to know what is available, and
         overloading does not lend to that.
 
-        Overloading is cool, but terribly horrible. 'Nuff said.
+        Overloading is *cool, but terribly horrible*. 'Nuff said.
 
-    *   Possibly susceptible to change
+    *   Readonly, tied variables, and magic
 
-        On a new enough Perl (2010+), it will use the op code implementation
-        (see below), which, in case the op tree changes, it will have to be
-        updated. That's not likely to happen but if any such changes arise,
-        the code will be updated to fix it.
+        Tied variables (used in Readonly, for example) are currently not
+        supported, because they work similar to overloading by hiding away
+        the implementation from the variable.
+
+        Consider the following:
+
+            use Data::Printer;
+            Readonly::Scalar my $rh2 => { a => { b => 2 } };
+            p $rh2->{a};
+
+            # result:
+            # "HASH(0x187dcc8)"
+
+        This should print a hashref structure with key b and value 2, but it
+        doesn't. It prints a string. It should have retrieved the values but
+        caused stringification instead.
+
+        Support for magic is still undetermined and being discussed. If
+        you're interested in this, please join the conversation on Github.
 
     *   Ignores subtle types:
 
@@ -134,7 +149,7 @@ DESCRIPTION
 
     Additionally, two implementations are available, depending on the perl
     version you have. For perl that supports Custom OPs, we actually add an
-    OP code (which is faster), and for perls that do not, we include an
+    OP (which is faster), and for perls that do not, we include an
     implementation that just calls an XS function - which is still faster
     than the Pure-Perl equivalent.
 
@@ -194,6 +209,8 @@ SUBROUTINES
 
         # now we can test it
         is_formatref( *main::STDOUT{'FORMAT'} );
+
+    This function is not available in Perl 5.6 and will trigger a "croak()".
 
   is_ioref($ref)
     Check for an IO reference.
