--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     Ref::Util - Utility functions for checking references
 
 VERSION
-    0.006
+    0.007
 
 DESCRIPTION
     Ref::Util introduces several functions to help identify references in a
@@ -106,13 +106,13 @@ DESCRIPTION
 
     *   Readonly, tied variables, and magic
 
-        Tied variables (used in Readonly, for example) are currently not
-        supported, because they work similar to overloading by hiding away
-        the implementation from the variable.
+        Tied variables (used in Readonly, for example) are not supported, as
+        they are not references, but regular variables with added magic.
 
         Consider the following:
 
             use Data::Printer;
+            use Readonly;
             Readonly::Scalar my $rh2 => { a => { b => 2 } };
             p $rh2->{a};
 
@@ -123,8 +123,8 @@ DESCRIPTION
         doesn't. It prints a string. It should have retrieved the values but
         caused stringification instead.
 
-        Support for magic is still undetermined and being discussed. If
-        you're interested in this, please join the conversation on Github.
+        The problem here is that "$rh2->{a}" is not a hashref, but a "PVLV"
+        with magic, so "is_hashref" will correctly not detect it.
 
     *   Ignores subtle types:
 
