--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     Ref::Util - Utility functions for checking references
 
 VERSION
-    0.007
+    0.008
 
 DESCRIPTION
     Ref::Util introduces several functions to help identify references in a
@@ -168,6 +168,11 @@ EXPORT
         use Ref::Util ':all';
 
 SUBROUTINES
+  is_ref($ref)
+    Check for a reference to anything.
+
+        is_ref([]);
+
   is_scalarref($ref)
     Check for a scalar reference.
 
