--- a/Changes
+++ b/Changes
@@ -2,6 +2,10 @@
         * Add a bunch of plain references functions to support
           explicitly non-blessed variations of the functions.
           (Aaron Crane)
+        * Use SvRXOK() on Perl 5.12+ (both opcode and XS) because
+          it's more correct. It means regular expressions support
+          magic because it should be used for regexps. They're
+          special.
 
 0.008   2016-01-23
         * Document is_ref() in the POD (GH #8).
