--- a/Changes
+++ b/Changes
@@ -1,9 +1,12 @@
 0.010
         * Add is_plain_* functions to support explicitly non-blessed
           variations of the functions. (Aaron Crane)
+        * Add is_blessed* functions to support explicitly blessed
+          variations of the functions. (Aaron Crane)
         * Support blessed and magical regexes in 5.10+. From the
           implementation perspective, we're now using SvRXOK() on
           Perl 5.10+ (both opcode and XS) because it's more correct.
+          (Sawyer X, Aaron Crane)
 
 0.008   2016-01-23
         * Document is_ref() in the POD (GH #8).
