ugh, manual editing

--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.011   2016-04-29
+        * Update README.
+
 0.010   2016-04-29
         * Add is_plain_* functions to support explicitly non-blessed
           variations of the functions. (Aaron Crane)
