--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     Ref::Util - Utility functions for checking references
 
 VERSION
-    0.008
+    0.010
 
 DESCRIPTION
     Ref::Util introduces several functions to help identify references in a
@@ -67,6 +67,13 @@ DESCRIPTION
 
     *   Supports blessed variables
 
+        Note: In future versions, the idea is to make the default functions
+        use the plain variation, which means explicitly non-blessed
+        references. If you want to explicitly check for blessed references,
+        you should use the "is_blessed_*" functions. There will be an
+        "is_any_*" variation which will act like the current main functions
+        - not caring whether it's blessed or not.
+
         When calling "ref", you receive either the reference type (SCALAR,
         ARRAY, HASH, etc.) or the package it's blessed into.
 
@@ -79,6 +86,17 @@ DESCRIPTION
             use Ref::Util 'is_hashref';
             my $foo = bless {}, 'PKG';
             is_hashref($foo); # works
+
+        On the other hand, in some situations it might be better to
+        specifically exclude blessed references. The rationale for that
+        might be that merely because some object happens to be implemented
+        using a hash doesn't mean it's necessarily correct to treat it as a
+        hash. For these situations, you can use "is_plain_hashref" and
+        friends, which have the same performance benefits as "is_hashref".
+
+        There is also a family of functions with names like
+        "is_blessed_hashref"; these return true for blessed object instances
+        that are implemented using the relevant underlying type.
 
     *   Ignores overloading
 
@@ -148,7 +166,7 @@ DESCRIPTION
         Support might be added, if a good reason arises.
 
     Additionally, two implementations are available, depending on the perl
-    version you have. For perl that supports Custom OPs, we actually add an
+    version you have. For perls that supports Custom OPs, we actually add an
     OP (which is faster), and for perls that do not, we include an
     implementation that just calls an XS function - which is still faster
     than the Pure-Perl equivalent.
@@ -179,6 +197,17 @@ SUBROUTINES
         is_scalarref(\"hello");
         is_scalarref(\30);
         is_scalarref(\$value);
+
+    Note that, even though a reference is itself a type of scalar value, a
+    reference to another reference is not treated as a scalar reference:
+
+        !is_scalarref(\\1);
+
+    The rationale for this is two-fold. First, callers that want to decide
+    how to handle inputs based on their reference type will usually want to
+    treat a ref-ref and a scalar-ref differently. Secondly, this more
+    closely matches the behavior of the "ref" builtin and of "reftype" in
+    Scalar::Util, which report a ref-ref as "REF" rather than "SCALAR".
 
   is_arrayref($ref)
     Check for an array reference.
@@ -227,6 +256,98 @@ SUBROUTINES
 
         is_refref( \[] ); # reference to array reference
 
+  is_plain_scalarref($ref)
+    Check for an unblessed scalar reference.
+
+        is_plain_scalarref(\"hello");
+        is_plain_scalarref(\30);
+        is_plain_scalarref(\$value);
+
+  is_plain_ref($ref)
+    Check for an unblessed reference to anything.
+
+        is_plain_ref([]);
+
+  is_plain_arrayref($ref)
+    Check for an unblessed array reference.
+
+        is_plain_arrayref([]);
+
+  is_plain_hashref($ref)
+    Check for an unblessed hash reference.
+
+        is_plain_hashref({});
+
+  is_plain_coderef($ref)
+    Check for an unblessed code reference.
+
+        is_plain_coderef( sub {} );
+
+  is_plain_globref($ref)
+    Check for an unblessed glob reference.
+
+        is_plain_globref( \*STDIN );
+
+  is_plain_formatref($ref)
+    Check for an unblessed format reference.
+
+        # set up format in STDOUT
+        format STDOUT =
+        .
+
+        # now we can test it
+        is_plain_formatref(bless *main::STDOUT{'FORMAT'} );
+
+  is_plain_refref($ref)
+    Check for an unblessed reference to a reference.
+
+        is_plain_refref( \[] ); # reference to array reference
+
+  is_blessed_scalarref($ref)
+    Check for a blessed scalar reference.
+
+        is_blessed_scalarref(bless \$value);
+
+  is_blessed_ref($ref)
+    Check for a blessed reference to anything.
+
+        is_blessed_ref(bless [], $class);
+
+  is_blessed_arrayref($ref)
+    Check for a blessed array reference.
+
+        is_blessed_arrayref(bless [], $class);
+
+  is_blessed_hashref($ref)
+    Check for a blessed hash reference.
+
+        is_blessed_hashref(bless {}, $class);
+
+  is_blessed_coderef($ref)
+    Check for a blessed code reference.
+
+        is_blessed_coderef( bless sub {}, $class );
+
+  is_blessed_globref($ref)
+    Check for a blessed glob reference.
+
+        is_blessed_globref( bless \*STDIN, $class );
+
+  is_blessed_formatref($ref)
+    Check for a blessed format reference.
+
+        # set up format for FH
+        format FH =
+        .
+
+        # now we can test it
+        is_blessed_formatref(bless *FH{'FORMAT'}, $class );
+
+  is_blessed_refref($ref)
+    Check for a blessed reference to a reference.
+
+        is_blessed_refref( bless \[], $class ); # reference to array reference
+
 SEE ALSO
     *   Params::Classify
 
@@ -251,4 +372,6 @@ AUTHORS
     *   Gonzalo Diethelm
 
     *   p5pclub
+
+    *   Aaron Crane
 
