--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+0.101   2016-08-29
+        * A test accidentally added a dependency on Readonly.pm. Fixed!
+          (GH #30)
+
 0.100   2016-08-27
         * Support situations in op-code implementation where the parameters
           do not come as a list. (Zefram)
