--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 0.101   2016-08-29
         * A test accidentally added a dependency on Readonly.pm. Fixed!
           (GH #30)
+        * Update README.
 
 0.100   2016-08-27
         * Support situations in op-code implementation where the parameters
