--- a/Changes
+++ b/Changes
@@ -3,7 +3,7 @@
 0.201     2017-05-12 15:42:54+02:00 Europe/Paris
 
         * Fix space/tab issue in Makefile (srezic, ether)
-        * Don't use DynamicPrereqs for unrelated Makefile.PL snippet (ehter)
+        * Don't use DynamicPrereqs for unrelated Makefile.PL snippet (ether)
 
 0.200     2017-05-12 10:14:26+02:00 Europe/Paris
 
